--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -62,6 +62,7 @@ build-backend = "setuptools.build_meta"
 target-version = "py312"
 line-length = 100
 src = ["app", "tests"]
+exclude = ["scripts"]
 
 [tool.ruff.lint]
 select = [
